Refactor code using Lists and CollectionUtils