@@ -25,7 +25,6 @@ import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 /**
  * Jimple-based pointer analysis IR builder.
@@ -58,8 +57,7 @@ class IRBuilder implements pascal.taie.ir.IRBuilder {
         for (int i = 0; i < nThreads; ++i) {
             groups.add(new ArrayList<>());
         }
-        List<JClass> classes = hierarchy.allClasses()
-                .collect(Collectors.toList());
+        List<JClass> classes = hierarchy.allClasses().toList();
         int i = 0;
         for (JClass c : classes) {
             for (JMethod m : c.getDeclaredMethods()) {
