@@ -16,7 +16,6 @@ import pascal.taie.ir.exp.Var;
 import pascal.taie.util.collection.Pair;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class TableSwitch extends SwitchStmt {
@@ -43,7 +42,7 @@ public class TableSwitch extends SwitchStmt {
     public List<Integer> getCaseValues() {
         return IntStream.range(lowIndex, highIndex + 1)
                 .boxed()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -51,7 +50,7 @@ public class TableSwitch extends SwitchStmt {
         return IntStream.range(lowIndex, highIndex + 1)
                 .mapToObj(i -> new Pair<>(i,
                         targets == null ? null : targets.get(i - lowIndex)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
